force-app/main/default/objects/OCE__HomeOfficeMessage__c/OCE__HomeOfficeMessage__c.object-meta.xml
<CustomObject>
    <description>Home Office Message</description>
    <label>Home Office Message</label>
    <nameField>
        <displayFormat>HOM-{00000}</displayFormat>
        <label>Home Office Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Office Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>