force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExpirationDate__c</fullName>
    <description>Date to indicate when message is no longer active and should be removed.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>