force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__IsDeletedOffline__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsDeletedOffline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Deleted Offline</description>
    <label>Is Deleted Offline</label>
    <type>Checkbox</type>
</CustomField>