force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__Message__c.field-meta.xml
<CustomField>
    <fullName>OCE__Message__c</fullName>
    <description>Message</description>
    <label>Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>