force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__OfflineUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineUniqueId__c</fullName>
    <description>Offline Unique Id</description>
    <externalId>true</externalId>
    <label>Offline Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>