force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>OCE__SortOrder__c</fullName>
    <description>Order of message to display.</description>
    <inlineHelpText>Order of message to display.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>