force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Date to indicate when message becomes active and should be displayed.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>