force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__Title__c.field-meta.xml
<CustomField>
    <fullName>OCE__Title__c</fullName>
    <description>Title</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>