force-app/main/default/objects/OCE__HomeOfficeMessage__c/fields/OCE__Type__c.field-meta.xml
<CustomField>
    <fullName>OCE__Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>